# simpletorch

./: .gitignore  LICENSE  README.md  setup.cfg
examples/: run_fast_tensor.py  run_scalar.py  run_tensor.py  run_torch.py
simpletorch/: __init__.py  autodiff.py  cuda_ops.py  fast_conv.py  fast_ops.py  module.py  nn.py  operators.py  scalar.py  scalar_functions.py  tensor.py  tensor_data.py  tensor_functions.py  tensor_ops.py  testing.py
tests/: strategies.py  tensor_strategies.py  test_autodiff.py  test_conv.py  test_module.py  test_modules.py  test_nn.py  test_operators.py  test_scalar.py  test_tensor.py  test_tensor_data.py  test_tensor_general.py
