[metadata]
name=simpletorch
version=0.1

[files]
packages =
    simpletorch
    mt_diagrams
[darglint]
ignore_regex=((^_(.*))|(.*map)|(.*zip)|(.*reduce)|(test.*)|(tensor_.*))
docstring_style=google
strictness=long

[flake8]
exclude = .git,__pycache__,docs/slides/*,old,build,dist

[isort]
profile=black
src_paths=simpletorch,test

[mypy]
strict = True
ignore_missing_imports = True
exclude=^(docs/)|(project/)|(assignments/)
implicit_reexport = True

[mypy-tests.*]
disallow_untyped_decorators = False
implicit_reexport = True

[black]
exclude=^(docs/)|(project/)|(assignments/)
